# specter

./: .coverage  .gitignore  AGENTS.md  ALGO.md  CLAUDE.md  JAVAGEN.md  LLM_GUIDED_FUZZER.md  README.md  SKILLS.md  pyproject.toml  tests_copaua0c.jsonl
examples/: COACTUPC.cbl.ast  COACTUPC.cbl.py  COACTUPC.py  COADM01C.cbl.ast  COADM01C.cbl.py  COBIL00C.cbl.ast  COBIL00C.cbl.py  COBSWAIT.cbl.ast  COMEN01C.cbl.ast  COMEN01C.cbl.py  COPAUA0C.cbl.py  COPAUA0C.mock  COPAUA0C.mock.cbl  COPAUA0C.py  CORPT00C.cbl.ast  CORPT00C.cbl.py  COSGN00C.cbl.ast  COSGN00C.cbl.py  COSGN00C.py  COTRN00C.cbl.ast  COTRN00C.cbl.py  COTRN00C.py  COTRN01C.cbl.ast  COTRN01C.cbl.py  COTRN02C.cbl.ast  COTRN02C.cbl.py  COUSR00C.cbl.ast  COUSR00C.cbl.py  COUSR01C.cbl.ast  COUSR01C.cbl.py  COUSR02C.cbl.ast  COUSR02C.cbl.py  COUSR03C.cbl.ast  COUSR03C.cbl.py  README.md  account-lookup.cbl  account-lookup.mock.cbl  coverage-config.yaml  perform.ast  perform_testset.catalog.md  (+3 more)
ralph-loops/: README.md  cobol-coverage-loop.md
scripts/: find_undefined_sources.sh  teach.sh
specter/: __init__.py  __main__.py  agent_compile.py  analysis.py  ast_parser.py  backward_slicer.py  branch_agent.py  branch_instrumenter.py  branch_registry.py  branch_swarm.py  cobol_coverage.py  cobol_executor.py  cobol_fix_cache.py  cobol_mock.py  cobol_snapshot.py  cobol_validate.py  code_generator.py  compile_swarm.py  concolic.py  condition_parser.py  copybook_parser.py  coverage_bundle.py  coverage_config.py  coverage_strategies.py  diagram.py  doc_generator.py  entry_extractor.py  incremental_mock.py  java_code_generator.py  (+26 more)
(+144 files in other folders)
