[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "specter"
version = "0.1.0"
description = "COBOL AST to executable Python code generator"
requires-python = ">=3.10"

[project.optional-dependencies]
concolic = ["z3-solver>=4.12"]

[project.scripts]
specter = "specter.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["specter*"] (edited)